Fix Bookmark all tabs as a folder crash

The list of active sessions needs to be refreshed when a session is
destroyed. It was being refreshed only on creation.

BUG: 432327
FIXED-IN: 21.04